--- a/index.html
+++ b/index.html
@@ -36,6 +36,10 @@
 
     <meta charset="UTF-8">
 
+    <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
+    <meta http-equiv="Pragma" content="no-cache" />
+    <meta http-equiv="Expires" content="0" />
+    
     <!-- Useful meta tags -->
     <!--        <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">-->
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -256,7 +260,7 @@
                                 <li class="item"> <a class="link goTo" href="#our-team">Our team</a></li>
                                 <li class="item"> <a class="link goTo" href="Presentation.pdf" target="_blank">Pitch
                                         Deck</a></li>
-                          <!--       <li class="item item--btn">
+                                <!--       <li class="item item--btn">
                                     <a href="views/login.html" class="header-mobile__btn btn btn--simple">
                                         <img src="img/sprites/intermediate-svg/profile-yellow.svg" class="btn__icon"
                                             alt="icon sign-up">
@@ -278,12 +282,12 @@
                     <div class="ieo-link-section">
                         <p>IEO Available on</p>
                         <div class="ieo-link-logos">
-                            <a href="https://p2pb2b.io/token-sale/CUR8/1" target="_blank">
+                            <a style="display:block" href="https://p2pb2b.io/token-sale/CUR8/1" target="_blank">
                                 <img src="img/main/p2pb2b.svg">
                             </a>
-                            <a id="airswap">
+                            <!-- <a id="airswap">
                                 <img src="img/main/airswap.svg">
-                            </a>
+                            </a> -->
                         </div>
                     </div>
 
@@ -668,7 +672,7 @@
                                 <div class="our-team__slider swiper-wrapper">
                                     <div class="our-team__slider-block swiper-slide">
                                         <div class="our-team__slider-avatar">
-                                            <img src="img/main/team-alexey.png" alt="Team-Avatar"
+                                            <img src="img/main/team-alexey.jpg" alt="Team-Avatar"
                                                 class="our-team__avatar-img">
                                         </div>
                                         <h5 class="our-team__slider-title">Alexey Ivanov</h5>
@@ -682,7 +686,7 @@
                                     </div>
                                     <div class="our-team__slider-block swiper-slide">
                                         <div class="our-team__slider-avatar">
-                                            <img src="img/main/team-joe.png" alt="Team-Avatar"
+                                            <img src="img/main/team-joe.jpg" alt="Team-Avatar"
                                                 class="our-team__avatar-img">
                                         </div>
                                         <h5 class="our-team__slider-title">Joe Adams</h5>
@@ -696,7 +700,7 @@
                                     </div>
                                     <div class="our-team__slider-block swiper-slide">
                                         <div class="our-team__slider-avatar">
-                                            <img src="img/main/team-james.png" alt="Team-Avatar"
+                                            <img src="img/main/team-james.jpg" alt="Team-Avatar"
                                                 class="our-team__avatar-img">
                                         </div>
                                         <h5 class="our-team__slider-title">James Hakim</h5>
@@ -729,7 +733,7 @@
                                     </div>
                                     <div class="our-team__slider-block swiper-slide">
                                         <div class="our-team__slider-avatar">
-                                            <img src="img/main/team-amrit.png" alt="Team-Avatar"
+                                            <img src="img/main/team-amrit.jpg" alt="Team-Avatar"
                                                 class="our-team__avatar-img">
                                         </div>
                                         <h5 class="our-team__slider-title">Amrit Mirchandani</h5>
@@ -743,7 +747,7 @@
                                     </div>
                                     <div class="our-team__slider-block swiper-slide">
                                         <div class="our-team__slider-avatar">
-                                            <img src="img/main/team-amal.png" alt="Team-Avatar"
+                                            <img src="img/main/team-amal.jpg" alt="Team-Avatar"
                                                 class="our-team__avatar-img">
                                         </div>
                                         <h5 class="our-team__slider-title">Amal Prasad</h5>
@@ -757,7 +761,7 @@
                                     </div>
                                     <div class="our-team__slider-block swiper-slide">
                                         <div class="our-team__slider-avatar">
-                                            <img src="img/main/team-aleks.png" alt="Team-Avatar"
+                                            <img src="img/main/team-aleks.jpg" alt="Team-Avatar"
                                                 class="our-team__avatar-img">
                                         </div>
                                         <h5 class="our-team__slider-title">Aleksandar Vujic</h5>
@@ -771,7 +775,7 @@
                                     </div>
                                     <div class="our-team__slider-block swiper-slide">
                                         <div class="our-team__slider-avatar">
-                                            <img src="img/main/team-calina.png" alt="Team-Avatar"
+                                            <img src="img/main/team-calina.jpg" alt="Team-Avatar"
                                                 class="our-team__avatar-img">
                                         </div>
                                         <h5 class="our-team__slider-title">Andrei Călina</h5>
@@ -785,7 +789,7 @@
                                     </div>
                                     <div class="our-team__slider-block swiper-slide">
                                         <div class="our-team__slider-avatar">
-                                            <img src="img/main/team-boulevard.png" alt="Team-Avatar"
+                                            <img src="img/main/team-boulevard.jpg" alt="Team-Avatar"
                                                 class="our-team__avatar-img">
                                         </div>
                                         <h5 class="our-team__slider-title">Boulevard A.</h5>
@@ -799,7 +803,7 @@
                                     </div>
                                     <div class="our-team__slider-block swiper-slide">
                                         <div class="our-team__slider-avatar">
-                                            <img src="img/main/team-emmanuel.png" alt="Team-Avatar"
+                                            <img src="img/main/team-emmanuel.jpg" alt="Team-Avatar"
                                                 class="our-team__avatar-img">
                                         </div>
                                         <h5 class="our-team__slider-title">Emmanuel Adams</h5>
@@ -813,7 +817,7 @@
                                     </div>
                                     <div class="our-team__slider-block swiper-slide">
                                         <div class="our-team__slider-avatar">
-                                            <img src="img/main/team-davies.png" alt="Team-Avatar"
+                                            <img src="img/main/team-davies.jpg" alt="Team-Avatar"
                                                 class="our-team__avatar-img">
                                         </div>
                                         <h5 class="our-team__slider-title">Jonathan Davies</h5>
@@ -827,7 +831,7 @@
                                     </div>
                                     <div class="our-team__slider-block swiper-slide">
                                         <div class="our-team__slider-avatar">
-                                            <img src="img/main/team-bojan.png" alt="Team-Avatar"
+                                            <img src="img/main/team-bojan.jpg" alt="Team-Avatar"
                                                 class="our-team__avatar-img">
                                         </div>
                                         <h5 class="our-team__slider-title">Bojan Lacic</h5>
@@ -841,7 +845,7 @@
                                     </div>
                                     <div class="our-team__slider-block swiper-slide">
                                         <div class="our-team__slider-avatar">
-                                            <img src="img/main/team-dmitrije.png" alt="Team-Avatar"
+                                            <img src="img/main/team-dmitrije.jpg" alt="Team-Avatar"
                                                 class="our-team__avatar-img">
                                         </div>
                                         <h5 class="our-team__slider-title">Dimitrije Cevizovic</h5>
@@ -855,7 +859,7 @@
                                     </div>
                                     <div class="our-team__slider-block swiper-slide">
                                         <div class="our-team__slider-avatar">
-                                            <img src="img/main/team-carrim.jpeg" alt="Team-Avatar"
+                                            <img src="img/main/team-carrim.jpg" alt="Team-Avatar"
                                                 class="our-team__avatar-img">
                                         </div>
                                         <h5 class="our-team__slider-title">Mohammed Carrim Ganey</h5>
@@ -869,7 +873,7 @@
                                     </div>
                                     <div class="our-team__slider-block swiper-slide">
                                         <div class="our-team__slider-avatar">
-                                            <img src="img/main/team-kalla.jpeg" alt="Team-Avatar"
+                                            <img src="img/main/team-kalla.jpg" alt="Team-Avatar"
                                                 class="our-team__avatar-img">
                                         </div>
                                         <h5 class="our-team__slider-title">Aslam Kalla</h5>
@@ -883,7 +887,7 @@
                                     </div>
                                     <div class="our-team__slider-block swiper-slide">
                                         <div class="our-team__slider-avatar">
-                                            <img src="img/main/team-pranav.png" alt="Team-Avatar"
+                                            <img src="img/main/team-pranav.jpg" alt="Team-Avatar"
                                                 class="our-team__avatar-img">
                                         </div>
                                         <h5 class="our-team__slider-title">Pranav Arya</h5>
