Added missing images; Reenabled AirSwap

--- a/index.html
+++ b/index.html
@@ -285,9 +285,9 @@
                             <a style="display:block" href="https://p2pb2b.io/token-sale/CUR8/1" target="_blank">
                                 <img src="img/main/p2pb2b.svg">
                             </a>
-                            <!-- <a id="airswap">
+                            <a id="airswap">
                                 <img src="img/main/airswap.svg">
-                            </a> -->
+                            </a>
                         </div>
                     </div>
 
