--- a/index.html
+++ b/index.html
@@ -1064,8 +1064,7 @@
                 <section class="audit" id="audit">
                     <div class="container center-text audit-container">
                         <img class="audit-logo" src="./img/main/lex-futurus-coin.png">
-                        <p>Curate and CUR8 tokens are regulated and secured by international law firm, Lex Futurus
-                            Group.</p>
+                        <p>Curate including CUR8 tokens are represented by international law firm & consultancy Lex Futurus Group.</p>
                     </div>
                 </section>
         </main>
