--- a/index.html
+++ b/index.html
@@ -572,42 +572,42 @@
                                     </li>
                                 </ul>
                             </div>
-                            <div class="roadmap__block roadmap__block--now wow fadeInRight" data-wow-delay="0.4s">
-                                <div class="roadmap__block-title roadmap__block-title--now">
+                            <div class="roadmap__block roadmap__block--done wow fadeInRight" data-wow-delay="0.4s">
+                                <div class="roadmap__block-title roadmap__block-title--done">
                                     <h3>Q3</h3>
                                     <div class="roadmap__block-year">2019</div>
                                 </div>
-                                <ul class="roadmap__list roadmap__list--now">
+                                <ul class="roadmap__list">
                                     <li class="roadmap__item">
-                                        <img src="img/sprites/intermediate-svg/roadmap-now.svg" alt="roadmap-done">
+                                        <img src="img/sprites/intermediate-svg/roadmap-done.svg" alt="roadmap-done">
                                         <span>PRE-IEO seed round complete</span>
                                     </li>
                                     <li class="roadmap__item">
-                                        <img src="img/sprites/intermediate-svg/roadmap-now.svg" alt="roadmap-done">
+                                        <img src="img/sprites/intermediate-svg/roadmap-done.svg" alt="roadmap-done">
                                         <span>10,000+ telegram members active</span>
                                     </li>
                                     <li class="roadmap__item">
-                                        <img src="img/sprites/intermediate-svg/roadmap-now.svg" alt="roadmap-done">
+                                        <img src="img/sprites/intermediate-svg/roadmap-done.svg" alt="roadmap-done">
                                         <span>Approved for 1st IEO listing on P2PB2B.io</span>
                                     </li>
                                 </ul>
                             </div>
-                            <div class="roadmap__block roadmap__block--next wow fadeInRight" data-wow-delay="0.6s">
-                                <div class="roadmap__block-title roadmap__block-title--next">
+                            <div class="roadmap__block roadmap__block--now wow fadeInRight" data-wow-delay="0.6s">
+                                <div class="roadmap__block-title roadmap__block-title--now">
                                     <h3>Q4</h3>
                                     <div class="roadmap__block-year">2019</div>
                                 </div>
                                 <ul class="roadmap__list roadmap__list--now">
                                     <li class="roadmap__item">
-                                        <img src="img/sprites/intermediate-svg/roadmap-next.svg" alt="roadmap-done">
+                                        <img src="img/sprites/intermediate-svg/roadmap-now.svg" alt="roadmap-done">
                                         <span>1st IEO starts, aiming to raise $2.25M USD</span>
                                     </li>
                                     <li class="roadmap__item">
-                                        <img src="img/sprites/intermediate-svg/roadmap-next.svg" alt="roadmap-done">
+                                        <img src="img/sprites/intermediate-svg/roadmap-now.svg" alt="roadmap-done">
                                         <span>Development officially starts on Curate platform</span>
                                     </li>
                                     <li class="roadmap__item">
-                                        <img src="img/sprites/intermediate-svg/roadmap-next.svg" alt="roadmap-done">
+                                        <img src="img/sprites/intermediate-svg/roadmap-now.svg" alt="roadmap-done">
                                         <span>CUR8 token is listed on two exchanges, P2PB2B.io and WhiteBit.io and
                                             begins
                                             trading</span>
