--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
       <script src="lang.js"></script> 
       <script src="https://cdn.jsdelivr.net/npm/js-cookie@2/src/js.cookie.min.js"></script>
       <script src="js/langswitch.js"></script> 
-      <script src="https://cdn.airswap.io/gallery/airswap-trader.js"></script>
+      <script src="https://cdn.airswap.io/gallery/airswap-trader.js" async></script>
       <script src="plugins/moment.js/moment.min.js"></script>
       <script src="plugins/countdown/countdown-timer.min.js"></script>
       <script src="plugins/goalProgress/goalProgress.js"></script>
