Added Medium in Featured

--- a/index.html
+++ b/index.html
@@ -515,6 +515,9 @@
                            target="_blank">
                         <img src="img/main/featured/odyssey.svg" />
                         </a>
+                        <a href="#">
+                        <img src="img/main/featured/medium.svg" />
+                        </a>
                         <a href="https://neironix.io/news/blogs/view?id=699" target="_blank">
                         <img src="img/main/featured/neironix.svg" />
                         </a>
