--- a/index.html
+++ b/index.html
@@ -900,6 +900,28 @@
                            </div>
                            <div class="our-team__slider-block swiper-slide">
                               <div class="our-team__slider-avatar">
+                                 <img src="img/main/team-laurianna.jpg" alt="Team-Avatar"
+                                    class="our-team__avatar-img">
+                              </div>
+                              <h5 class="our-team__slider-title">Laurianna Blackwell</h5>
+                              <h6 class="our-team__slider-undertitle lang" key="ceo">Ambassador</h6>
+                              <div class="our-team__slider-social">
+                                 <a href="https://twitter.com/laurianna90"
+                                    class="our-team__slider-social-link" target="_blank">
+                                 <img src="img/sprites/intermediate-svg/linkedin.svg" alt="">
+                                 </a>
+                                 <a href="https://twitter.com/laurianna90" class="our-team__slider-social-link"
+                                    target="_blank">
+                                 <img src="img/sprites/intermediate-svg/twitter.svg" alt="">
+                                 </a>
+                                 <a href="https://www.instagram.com/laurianna90/" class="our-team__slider-social-link"
+                                    target="_blank">
+                                 <img src="img/sprites/intermediate-svg/instagram.svg" alt="">
+                                 </a>
+                              </div>
+                           </div>
+                           <div class="our-team__slider-block swiper-slide">
+                              <div class="our-team__slider-avatar">
                                  <img src="img/main/team-bret.jpg" alt="Team-Avatar"
                                     class="our-team__avatar-img">
                               </div>
