--- a/index.html
+++ b/index.html
@@ -686,6 +686,23 @@
                      </div>
                   </div>
                </div>
+               <div class="container">
+                <h2 class="roadmap__title wow fadeInUp lang" key="usecasehdr">CUR8 Use Cases</h2>
+                <div class="about__text-wrap">
+                    <p class="about__text lang" key="abouttext">
+                        CUR8 tokens serve as a multi-use utility token offering users a wide<br>
+                        number of use cases on both the Curate DApp and outside the Curate ecosystem.<br><br>
+
+                        – Purchase items on the Curate platform using CUR8 tokens<br>
+                        – Unlock special discounts on items such as 10% off coupons<br>
+                        – Redeem free shipping when shopping on the platform<br>
+                        – Upgrade account to Curate Pro to unlock more features<br>
+                        – Social karma tipping for retailers to offer bounties to users for reviews or perform certain activities i.e like their content<br>
+                        – Use as a monetary currency for payments outside of the Curate ecosystem with our partners.<br>
+                        – Plus many more to be added as we go live!
+                    </p>
+                </div>
+               </div>
             </section>
             <section class="roadmap" id="demo">
             <div class="container">
