--- a/index.html
+++ b/index.html
@@ -689,7 +689,7 @@
                <div class="container">
                 <h2 class="roadmap__title wow fadeInUp lang" key="usecasehdr">CUR8 Use Cases</h2>
                 <div class="about__text-wrap">
-                    <p class="about__text lang" key="abouttext">
+                    <p class="about__text lang" key="usecasetext">
                         CUR8 tokens serve as a multi-use utility token offering users a wide<br>
                         number of use cases on both the Curate DApp and outside the Curate ecosystem.<br><br>
 
@@ -921,7 +921,7 @@
                                     class="our-team__avatar-img">
                               </div>
                               <h5 class="our-team__slider-title">Laurianna Blackwell</h5>
-                              <h6 class="our-team__slider-undertitle lang" key="ceo">Ambassador</h6>
+                              <h6 class="our-team__slider-undertitle lang" key="ambassador">Ambassador</h6>
                               <div class="our-team__slider-social">
                                  <a href="https://twitter.com/laurianna90"
                                     class="our-team__slider-social-link" target="_blank">
