--- a/index.html
+++ b/index.html
@@ -55,137 +55,6 @@
       <script src="plugins/goalProgress/goalProgress.js"></script>
       <script src="plugins/lightslider/lightslider.js"></script>
       <script src="js/main.js"></script>
-      <style>
-      .noscroll {
-         overflow:hidden;
-      }
-         .languages {
-         width: 133px;
-         display: inline-block;
-         vertical-align: middle;
-         margin-right: 19px;
-         }
-         .languages__inner {
-         position: relative;
-         z-index: 2;
-         }
-         .languages__overlay {
-         position:absolute;
-         z-index:100;
-         transition: .5s ease;
-         background:rgba(0,0,0,0.5);
-         width:100vw;
-         height:100vh;
-         opacity: 0;
-         visibility: hidden;
-         }
-         .languages__popup {
-            z-index:101;
-         position: absolute;
-         right: 0;
-         margin-top: 7px;
-         width: 133px;
-         background: #fff;
-         border-radius: 4px;
-         opacity: 0;
-         visibility: hidden;
-         -webkit-box-shadow: 0 4px 17px rgba(0, 0, 0, 0.1);
-         box-shadow: 0 4px 17px rgba(0, 0, 0, 0.1);
-         -webkit-transition: all 0.3s;
-         transition: all 0.3s;
-         }
-         .languages__popup.active {
-         opacity: 1;
-         visibility: visible;
-         }
-         .languages__popup.active a {
-         transition: 0.3s ease;
-         }
-         .languages__popup.active a:hover {
-            background-color: #FFD788!important;
-         }
-         .languages__popup a {
-         position: relative;
-         display: block;
-         height: 35px;
-         font-size: 14px;
-         color: #000;
-         font-weight: 500;
-         width: 133px;
-         padding: 9px 20px 10px 46px;
-         text-decoration: none;
-         text-align: left;
-         -webkit-box-sizing: border-box;
-         box-sizing: border-box;
-         }
-         .languages__popup a:first-child {
-            border-radius: 4px 4px 0 0;
-         }
-         .languages__popup a:last-child {
-            border-radius: 0 0 4px 4px;
-         }
-         .languages a.ru:before {
-         background: url(../img/ru.svg) 0 0 no-repeat;
-         }
-         .languages a.cn:before {
-         background: url(../img/cn.svg) 0 0 no-repeat;
-         }
-         .languages a.us:before {
-         background: url(../img/us.svg) 0 0 no-repeat;
-         }
-         .languages a.kr:before {
-         background: url(../img/kr.svg) 0 0 no-repeat;
-         }
-         .languages__popup a:before {
-         position: absolute;
-         content: '';
-         left: 14px;
-         top: 50%;
-         width: 25px;
-         height: 14px;
-         margin-top: -7px;
-         }
-         .languages__body a {
-         position: relative;
-         display: block;
-         height: 35px;
-         font-size: 14px;
-         color: #FFFFFF;
-         font-weight: 500;
-         width: 133px;
-         padding: 9px 20px 10px 46px;
-         border-radius: 4px;
-         text-decoration: none;
-         text-align: left;
-         background: rgba(0, 0, 0, 0.02);
-         -webkit-box-sizing: border-box;
-         box-sizing: border-box;
-         }
-         .languages__body a:before {
-         position: absolute;
-         content: '';
-         left: 14px;
-         top: 50%;
-         width: 25px;
-         height: 14px;
-         margin-top: -7px;
-         }
-         .languages__body a:after {
-         position: absolute;
-         content: '';
-         right: 10px;
-         top: 15px;
-         border-style: solid;
-         height: 0;
-         width: 0;
-         border-color: #fff transparent transparent transparent;
-         border-width: 4px 3px 0 3px;
-         }
-
-         .active {
-         opacity: 1; visibility: visible;
-         }
-      </style>
       <!-- Custom styles -->
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.5.0/css/swiper.min.css">
       <link rel="stylesheet" href="styles/main.css">
@@ -514,9 +383,6 @@
                         <a href="https://www.theodysseyonline.com/curate-style-a-revolutionary-platform"
                            target="_blank">
                         <img src="img/main/featured/odyssey.svg" />
-                        </a>
-                        <a href="#">
-                        <img src="img/main/featured/medium.svg" />
                         </a>
                         <a href="https://neironix.io/news/blogs/view?id=699" target="_blank">
                         <img src="img/main/featured/neironix.svg" />
@@ -923,17 +789,13 @@
                               <h5 class="our-team__slider-title">Laurianna Blackwell</h5>
                               <h6 class="our-team__slider-undertitle lang" key="ambassador">Ambassador</h6>
                               <div class="our-team__slider-social">
-                                 <a href="https://twitter.com/laurianna90"
-                                    class="our-team__slider-social-link" target="_blank">
-                                 <img src="img/sprites/intermediate-svg/linkedin.svg" alt="">
-                                 </a>
                                  <a href="https://twitter.com/laurianna90" class="our-team__slider-social-link"
                                     target="_blank">
                                  <img src="img/sprites/intermediate-svg/twitter.svg" alt="">
                                  </a>
                                  <a href="https://www.instagram.com/laurianna90/" class="our-team__slider-social-link"
                                     target="_blank">
-                                 <img src="img/sprites/intermediate-svg/instagram.svg" alt="">
+                                 <img src="img/main/inst.svg" alt="">
                                  </a>
                               </div>
                            </div>
@@ -1447,7 +1309,7 @@
                         </a>
                         <a href="http://linkedin.com/company/curateproject" class="footer__social-link"
                            target="_blank">
-                        <img src="img/sprites/intermediate-svg/linkedin-footer.svg" alt=""
+                        <img src="img/sprites/intermediate-svg/lnkdn.svg" alt=""
                            class="footer__social-icon">
                         </a>
                         <a href="https://reddit.com/r/curatestyle" class="footer__social-link" target="_blank">
@@ -1455,6 +1317,18 @@
                         </a>
                         <a href="https://github.com/curate-project" class="footer__social-link" target="_blank">
                         <img src="img/sprites/intermediate-svg/github.svg" alt="" class="footer__social-icon">
+                        </a>
+                        <a href="https://medium.com/@curateproject" class="footer__social-link" target="_blank">
+                        <img src="img/sprites/intermediate-svg/medium.svg" alt="" class="footer__social-icon">
+                        </a>
+                        <a href="https://www.facebook.com/permalink.php?id=686843881765448&story_fbid=702628800186956" class="footer__social-link" target="_blank">
+                        <img src="img/sprites/intermediate-svg/faceb.svg" alt="" class="footer__social-icon">
+                        </a>
+                        <a href="https://www.producthunt.com/posts/curate-4" class="footer__social-link" target="_blank">
+                        <img src="img/sprites/intermediate-svg/phunt.svg" alt="" class="footer__social-icon">
+                        </a>
+                        <a href="https://bitcointalk.org/index.php?topic=5164387.0" class="footer__social-link" target="_blank">
+                        <img src="img/sprites/intermediate-svg/btalk.svg" alt="" class="footer__social-icon">
                         </a>
                      </div>
                      <div class="footer__totop">
