--- a/index.html
+++ b/index.html
@@ -341,7 +341,7 @@
                   </a> -->
                   <a id="airswap" class="intro__btn btn btn--airswap">
                   <img src="img/main/header/airswap.svg" class="btn__icon" alt="icon airswap">
-                  <span class="lang" key="airswap">BUY VIA AIRSWAP (NO KYC)</span>
+                  <span class="lang" key="airswap">BUY CUR8 (NO KYC/FEES)</span>
                   </a>
                   <div class="intro__btn-group">
                      <a href="views/login.html" class="intro__btn btn">
