--- a/index.html
+++ b/index.html
@@ -162,6 +162,7 @@
                                  <div class="languages__popup">
                                     <a id="us" href="#" class="us translate">English</a>
                                     <a id="ru" href="#" class="ru translate">Russian</a>
+                                    <a id="vi" href="#" class="vi translate">Vietnamese</a>
                                     <!-- <a id="kr" href="#" class="kr translate">Korean</a>
                                     <a id="cn" href="#" class="cn translate">China</a> -->
                                  </div>
