Optimization + roadmap edits

--- a/index.html
+++ b/index.html
@@ -7,6 +7,20 @@
          <meta http-equiv="Expires" content="0" /> -->
       <!-- Useful meta tags -->
       <!--        <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">-->
+
+      <link rel="dns-prefetch" href="//cdnjs.cloudflare.com">
+      <link rel="dns-prefetch" href="//www.googletagmanager.com">
+      <link rel="dns-prefetch" href="//www.facebook.com">
+      <link rel="dns-prefetch" href="//code.jquery.com">
+      <link rel="dns-prefetch" href="//cdn.jsdelivr.net">
+      <link rel="dns-prefetch" href="//cdn.airswap.io">
+      <link rel="dns-prefetch" href="//example.com">
+      <link rel="dns-prefetch" href="//example.com">
+      <link rel="dns-prefetch" href="//example.com">
+      <link rel="dns-prefetch" href="//example.com">
+      <link rel="dns-prefetch" href="//example.com">
+      <link rel="dns-prefetch" href="//example.com">
+
       <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
       <meta http-equiv="x-ua-compatible" content="ie=edge">
       <meta name="author" content="">
@@ -45,18 +59,9 @@
       <meta name="msapplication-square310x310logo" content="mstile-310x310.png">
       <meta name="theme-color" content="#040306">
       <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-      <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
-      <script src="lang.js"></script> 
-      <script src="https://cdn.jsdelivr.net/npm/js-cookie@2/src/js.cookie.min.js"></script>
-      <script src="js/langswitch.js"></script> 
-      <script src="https://cdn.airswap.io/gallery/airswap-trader.js" async></script>
-      <script src="plugins/moment.js/moment.min.js"></script>
-      <script src="plugins/countdown/countdown-timer.min.js"></script>
-      <script src="plugins/goalProgress/goalProgress.js"></script>
-      <script src="plugins/lightslider/lightslider.js"></script>
-      <script src="js/main.js"></script>
+      
       <!-- Custom styles -->
-      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.5.0/css/swiper.min.css">
+      
       <link rel="stylesheet" href="styles/main.css">
       <!-- Title -->
       <title>CURATE</title>
@@ -230,15 +235,19 @@
             <div class="header__intro intro">
             <div class="ieo-link-section">
             <a target="_blank" href="https://icomarks.com/ieo/curate" class="ieo-link-block">
+            <div class="martishka">
             <div class="ieo-link-rate">9.6 <span style="font-size:14px">/ 10</span></div>
             <div class="ieo-link-icon">
             <img src="img/main/header/ICOmarks.svg" alt="icomarks">
             </div>
+            </div>
             </a>
             <a target="_blank" href="https://icobench.com/ico/curate" class="ieo-link-block">
+            <div class="martishka">
             <div class="ieo-link-rate">4.9 <span style="font-size:14px">/ 5</span></div>
             <div class="ieo-link-icon">
             <img src="img/main/header/icobench.svg" alt="icobench">
+            </div>
             </div>
             </a>
             </div>
@@ -334,7 +343,7 @@
                   <div class="about__wrap">
                      <div class="about__wrap-content">
                         <div class="about__img-wrap wow fadeInUp">
-                           <img style="box-shadow: -100px 60px 100px rgba(0, 0, 0, 0.2)" src="img/main/iphonex.png"
+                           <img style="box-shadow: -100px 60px 100px rgba(0, 0, 0, 0.2)" src="img/main/iphonex.webp"
                               alt="iphonex">
                         </div>
                         <div class="about__info-wrap">
@@ -592,7 +601,7 @@
                         <ul class="roadmap__list roadmap__list--now">
                            <li class="roadmap__item">
                               <img src="img/sprites/intermediate-svg/roadmap-now.svg" alt="roadmap-done">
-                              <span class="lang" key="qfour">1st IEO starts, aiming to raise $2.25M USD</span>
+                              <span class="lang" key="qfour">IEO phase 1 starts on P2PB2B.io</span>
                            </li>
                            <li class="roadmap__item">
                               <img src="img/sprites/intermediate-svg/roadmap-now.svg" alt="roadmap-done">
@@ -600,7 +609,7 @@
                            </li>
                            <li class="roadmap__item">
                               <img src="img/sprites/intermediate-svg/roadmap-now.svg" alt="roadmap-done">
-                              <span class="lang" key="qfourthree">CUR8 token is listed on two exchanges, P2PB2B.io and WhiteBit.io and begins trading</span>
+                              <span class="lang" key="qfourthree">100,000 registered users and followers across all channels</span>
                            </li>
                         </ul>
                      </div>
@@ -612,7 +621,7 @@
                         <ul class="roadmap__list roadmap__list--now">
                            <li class="roadmap__item">
                               <img src="img/sprites/intermediate-svg/roadmap-next.svg" alt="roadmap-done">
-                              <span class="lang" key="twentyqone">2nd IEO starts on two top CoinMarketCap approved exchanges</span>
+                              <span class="lang" key="twentyqone">IEO phase 2 starts on ShortEx.net</span>
                            </li>
                            <li class="roadmap__item">
                               <img src="img/sprites/intermediate-svg/roadmap-next.svg" alt="roadmap-done">
@@ -620,8 +629,7 @@
                            </li>
                            <li class="roadmap__item">
                               <img src="img/sprites/intermediate-svg/roadmap-next.svg" alt="roadmap-done">
-                              <span class="lang" key="twentyqonethree">CUR8 token listed on two more top exchanges, volume of trading
-                              increase</span>
+                              <span class="lang" key="twentyqonethree">CUR8 token approved to list on ShortEx.net and TraderOne.Exchange with market maker in place to ensure liquidity and price stabilization</span>
                            </li>
                         </ul>
                      </div>
@@ -633,19 +641,19 @@
                         <ul class="roadmap__list roadmap__list--now">
                            <li class="roadmap__item">
                               <img src="img/sprites/intermediate-svg/roadmap-next.svg" alt="roadmap-done">
-                              <span class="lang" key="twentyqtwo">3rd IEO starts on a DEX</span>
+                              <span class="lang" key="twentyqtwo">IEO phase 2 starts on KuCoin.com</span>
                            </li>
                            <li class="roadmap__item">
                               <img src="img/sprites/intermediate-svg/roadmap-next.svg" alt="roadmap-done">
-                              <span class="lang" key="twentyqtwotwo">Public-beta version launched available to new members</span>
+                              <span class="lang" key="twentyqtwotwo">Public-beta version launched available globally</span>
                            </li>
                            <li class="roadmap__item">
                               <img src="img/sprites/intermediate-svg/roadmap-next.svg" alt="roadmap-done">
-                              <span class="lang" key="twentyqtwothree">Curate reaches 10,000 active monthly users using the platform and app</span>
+                              <span class="lang" key="twentyqtwothree">Curate surpases 250,000 active users across the platform and app</span>
                            </li>
                            <li class="roadmap__item">
                               <img src="img/sprites/intermediate-svg/roadmap-next.svg" alt="roadmap-done">
-                              <span class="lang" key="twentyqtwofour">Start of application development</span>
+                              <span class="lang" key="twentyqtwofour">250+ retailers/brands partnered with Curate</span>
                            </li>
                         </ul>
                      </div>
@@ -661,7 +669,7 @@
                      <div class="devs">
                         <div class="developer">
                            <div class="our-team__slider-avatar">
-                              <img src="img/main/team-james.jpg" alt="Team-Avatar"
+                              <img src="img/main/team-james.webp" alt="Team-Avatar"
                                  class="our-team__avatar-img">
                            </div>
                            <h5 class="our-team__slider-title">James Hakim</h5>
@@ -727,7 +735,7 @@
                         <div class="our-team__slider swiper-wrapper">
                            <div class="our-team__slider-block swiper-slide">
                               <div class="our-team__slider-avatar">
-                                 <img src="img/main/team-joe.jpg" alt="Team-Avatar"
+                                 <img src="img/main/team-joe.webp" alt="Team-Avatar"
                                     class="our-team__avatar-img">
                               </div>
                               <h5 class="our-team__slider-title">Joe Adams</h5>
@@ -759,7 +767,7 @@
                            </div>
                            <div class="our-team__slider-block swiper-slide">
                               <div class="our-team__slider-avatar">
-                                 <img src="img/main/team-amrit.jpg" alt="Team-Avatar"
+                                 <img src="img/main/team-amrit.webp" alt="Team-Avatar"
                                     class="our-team__avatar-img">
                               </div>
                               <h5 class="our-team__slider-title">Amrit Mirchandani</h5>
@@ -829,7 +837,7 @@
                            </div>
                            <div class="our-team__slider-block swiper-slide">
                               <div class="our-team__slider-avatar">
-                                 <img src="img/main/team-emmanuel.jpg" alt="Team-Avatar"
+                                 <img src="img/main/team-emmanuel.webp" alt="Team-Avatar"
                                     class="our-team__avatar-img">
                               </div>
                               <h5 class="our-team__slider-title">Emmanuel Adams</h5>
@@ -885,7 +893,7 @@
                            </div>
                            <div class="our-team__slider-block swiper-slide">
                               <div class="our-team__slider-avatar">
-                                 <img src="img/main/team-kalla.jpg" alt="Team-Avatar"
+                                 <img src="img/main/team-kalla.webp" alt="Team-Avatar"
                                     class="our-team__avatar-img">
                               </div>
                               <h5 class="our-team__slider-title">Aslam Kalla</h5>
@@ -1313,11 +1321,22 @@
          </div>
       </main>
       <!--SCRIPTS-->
+      <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+      <script src="lang.js"></script> 
+      <script src="https://cdn.jsdelivr.net/npm/js-cookie@2/src/js.cookie.min.js"></script>
+      <script src="js/langswitch.js"></script> 
+      <script src="https://cdn.airswap.io/gallery/airswap-trader.js" async></script>
+      <script src="plugins/moment.js/moment.min.js"></script>
+      <script src="plugins/countdown/countdown-timer.min.js"></script>
+      <script src="plugins/goalProgress/goalProgress.js"></script>
+      <script src="plugins/lightslider/lightslider.js"></script>
+      <script src="js/main.js"></script>
       <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.5.0/js/swiper.min.js"></script>
       <script src="js/wow.js"></script>
       <script>
          new WOW().init();
       </script>
+      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.5.0/css/swiper.min.css">
       <link rel="stylesheet" href="plugins/goalProgress/goalProgress.css">
       <link rel="stylesheet" href="plugins/lightslider/lightslider.css">
       <link rel="stylesheet" href="styles/animation.css">
