Upgrade to new version of AirSwap widget

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
     <meta name="theme-color" content="#040306">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
 
-    <script src="https://cdn.airswap.io/gallery/airswap-trader.js"></script>
+    <script src="https://cdn.airswap.io/airswap-instant-widget.js" async></script>
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"
         integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
 
