New exchange logos, correct link to pdf in user acc, updated roadmap

--- a/index.html
+++ b/index.html
@@ -613,6 +613,10 @@
                               <img src="img/sprites/intermediate-svg/roadmap-now.svg" alt="roadmap-done">
                               <span class="lang" key="qfourthree">100,000 registered users and followers across all channels</span>
                            </li>
+                           <li class="roadmap__item">
+                              <img src="img/sprites/intermediate-svg/roadmap-now.svg" alt="roadmap-done">
+                              <span class="lang" key="twentyqone">IEO phase 2 starts on ShortEx.net</span>
+                           </li>
                         </ul>
                      </div>
                      <div class="roadmap__block roadmap__block--next wow fadeInRight" data-wow-delay="0.8s">
@@ -621,10 +625,6 @@
                            <div class="roadmap__block-year">2020</div>
                         </div>
                         <ul class="roadmap__list roadmap__list--now">
-                           <li class="roadmap__item">
-                              <img src="img/sprites/intermediate-svg/roadmap-next.svg" alt="roadmap-done">
-                              <span class="lang" key="twentyqone">IEO phase 2 starts on ShortEx.net</span>
-                           </li>
                            <li class="roadmap__item">
                               <img src="img/sprites/intermediate-svg/roadmap-next.svg" alt="roadmap-done">
                               <span class="lang" key="twentyqonetwo">Private-alpha launch of Curate platform open to telegram members</span>
@@ -956,8 +956,8 @@
                         <div class="partner2 wow fadeInUp"><img src="img/main/p2pb2b.svg"></div>
                         <div class="partner2 wow fadeInUp"><img src="img/main/whitebit.svg"></div>
                         <div class="partner2 wow fadeInUp wow fadeInUp"><img src="img/main/airswap.svg"></div>
-                        <div class="partner2 wow fadeInUp"><img src="img/main/exmarkets.svg"></div>
-                        <div class="partner2 wow fadeInUp"><img src="img/main/coinexchange.svg"></div>
+                        <div class="partner2 wow fadeInUp"><img src="img/main/shortex.svg"></div>
+                        <div class="partner2 wow fadeInUp"><img src="img/main/traderone.svg"></div>
                      </div>
                   </div>
                </div>
