--- a/index.html
+++ b/index.html
@@ -756,7 +756,7 @@
                      <h2 class="our-team__title wow fadeInUp lang" key="ourteam">
                         Team
                      </h2>
-                     <div class="our-team__slider-wrap swiper-container wow fadeInUp">
+                     <div class="our-team__slider-wrap swiper-container wow fadeInUp" style="overflow-x:hidden!important;">
                         <div class="our-team__slider swiper-wrapper">
                            <div class="our-team__slider-block swiper-slide">
                               <div class="our-team__slider-avatar">
