Added Dropdown Menu
Edited 2 files by following this tutorial: https://www.w3schools.com/howto/howto_css_dropdown.asp

--- a/js/index.html
+++ b/js/index.html
@@ -161,8 +161,13 @@
                                 <li class="main-nav__item"><a class="main-nav__item-link goTo" href="#our-team">Our
                                         team</a>
                                 </li>
-                                <li class="main-nav__item"><a class="main-nav__item-link" href="Presentation.pdf"
-                                        target="_blank">Pitch Deck</a>
+                                <li class="main-nav__item">
+                                      <button class="dropbtn">Investors</button>
+  <div class="dropdown-content">
+    <a href="https://curate.style/whitepaper.pdf">Whitepaper</a>
+    <a href="https://curate.style/Presentation.pdf">Deck</a>
+    <a href="#">Onepager</a>
+  </div>
                                 </li>
                             </ul>
                         </div>
